versioned_docs/version-3.9/helm-charts/getting-started-scalar-manager.mdx
---
tags:
  - Enterprise Option
displayed_sidebar: docsEnglish
---

# Deploy Scalar Manager

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

[Scalar Manager](../scalar-manager/overview.mdx) is a centralized management and monitoring solution for ScalarDB and ScalarDL in Kubernetes clusters. It enables you to:

- Monitor the availability of ScalarDB and ScalarDL.
- Schedule and execute pausing jobs to create transactionally consistent periods in the databases used by ScalarDB and ScalarDL.
- Monitor ScalarDB and ScalarDL time-series metrics and logs through Grafana dashboards.

This guide explains how to deploy and access Scalar Manager on a Kubernetes cluster using Scalar Helm Charts.

## Prerequisites

Before deploying Scalar Manager, you must do the following:

- Install the tools mentioned in [Getting Started with Scalar Helm Charts](getting-started-scalar-helm-charts.mdx).
- Deploy `kube-prometheus-stack` as instructed in [Getting Started with Helm Charts (Monitoring using Prometheus Operator)](getting-started-monitoring.mdx).
- Deploy `loki-stack` as instructed in [Getting Started with Helm Charts (Logging using Loki Stack)](getting-started-logging.mdx).
- Have a running PostgreSQL database, either self-managed or from a cloud service provider. This database stores the data of Scalar Manager. For example, you can use the [Bitnami package for PostgreSQL](https://artifacthub.io/packages/helm/bitnami/postgresql) to deploy a PostgreSQL database in your Kubernetes cluster.

## Deployment architecture diagram

The following is an architecture diagram for the components deployed in a Kubernetes cluster.

```
+----------------------------------------------------------------------------------------------------------------------+
|        +----------------------------+                                                                                |
|        |       scalar-manager       |                                                                                |
|        |                            |                                                                                |
|        |    +------------------+    | ---------------------------------(Manage)--------------------------+           |
|    +---+--->|  Scalar Manager  |    |                                                                    |           |
|    |   |    +---+--------------+    |                                                                    |           |
|    |   |        |                   |                                                                    |           |
|    |   +--------+-------------------+                                                                    |           |
|    |            |                                                                                        |           |
|    |            +----+------------------------------------------+                                        |           |
|    |                 |                                          |                                        |           |
|    |        +--------+------------------------------------------+---------+                              |           |
|    |        |        |       kube-prometheus-stack              |         |                              V           |
|    |        |        V                                          V         |                     +-----------------+  |
|    |        | +--------------+         +--------------+  +--------------+ | -----(Monitor)----> | Scalar Products |  |
|    |        | |  Prometheus  | <---+   | Alertmanager |  |   Grafana    | |                     |                 |  |
|    |        | +------+-------+     |   +--------------+  +------+-------+ |                     |  +-----------+  |  |
|    |        |                      |                            |         |                     |  | ScalarDB  |  |  |
|    |        |                      +----------------------------+         |                     |  +-----------+  |  |
|    |        |                                                   |         |                     |                 |  |
|    |        +---------------------------------------------------+---------+                     |  +-----------+  |  |
|    |                                                            |                               |  | ScalarDL  |  |  |
|    |                 +------------------------------------------+                   +---------- |  +-----------+  |  |
|    |                 |                                                              |           +-----------------+  |
|    |        +--------+---------------------------+                                  |                                |
|    |        |        |    loki-stack             |                                  |                                |
|    |        |        V                           |                                  |                                |
|    |        | +--------------+  +--------------+ | <----------------(Log)-----------+                                |
|    |        | |     Loki     |  |   Promtail   | |                                                                   |
|    |        | +--------------+  +--------------+ |                                                                   |
|    |        +------------------------------------+                                                                   |
|    |                                                                                                                 |
|    |                                Kubernetes                                                                       |
+----+-----------------------------------------------------------------------------------------------------------------+
     |
  Expose the environment to localhost (127.0.0.1) or use a load balancer to access it
     |
  (Access the dashboard through HTTP)
     |
+----+----+
| Browser |
+---------+

```

## Step 1. Start minikube

Open **Terminal**, and start minikube by running the following command:

```console
minikube start
```

## Step 2. Upgrade `kube-prometheus-stack` to enable Grafana authentication with auth proxy

To allow users to access Grafana after logging in to Scalar Manager, you must enable Grafana authentication with auth proxy.

In your custom values file for `kube-prometheus-stack` (for example, `scalar-prometheus-custom-values.yaml`), add or revise the following configurations:

```yaml
kubeStateMetrics:
  enabled: true

nodeExporter:
  enabled: true

kubelet:
  enabled: true

grafana:
  grafana.ini:
    users:
      allow_sign_up: false
      auto_assign_org: true
      auto_assign_org_role: Editor
    auth.proxy:
      enabled: true
      header_name: X-WEBAUTH-USER
      header_property: username
      auto_sign_up: true
    server:
      root_url: "%(protocol)s://%(domain)s:%(http_port)s/grafana"
```

Then, upgrade the Helm installation by running the following command:

```console
helm upgrade scalar-monitoring prometheus-community/kube-prometheus-stack -n monitoring -f scalar-prometheus-custom-values.yaml
```

## Step 3. Set environment variables

Set the following environment variables for Scalar Manager, replacing the contents in the angle brackets as described:

```console
SCALAR_MANAGER_RELEASE_NAME=<ADD_RELEASE_NAME>
SCALAR_MANAGER_NAMESPACE=<ADD_NAMESPACE>
SCALAR_MANAGER_CUSTOM_VALUES_FILE=<ADD_PATH_TO_CUSTOM_VALUES_FILE>
SCALAR_MANAGER_CHART_VERSION=<ADD_CHART_VERSION>
```

## Step 4. Prepare a custom values file

Prepare a custom values file for Scalar Manager:

1. Create an empty file named `scalar-manager-custom-values.yaml`.
2. Follow the instructions in [Configure a custom values file for Scalar Manager](configure-custom-values-scalar-manager.mdx).

## Step 5. Install and deploy Scalar Manager

Install and deploy the `scalar-manager` Helm Chart by running the following command:

```console
helm install ${SCALAR_MANAGER_RELEASE_NAME} scalar-labs/scalar-manager -n ${SCALAR_MANAGER_NAMESPACE} -f ${SCALAR_MANAGER_CUSTOM_VALUES_FILE} --version ${SCALAR_MANAGER_CHART_VERSION}
```

## Step 6. Access Scalar Manager

The method to access Scalar Manager depends on your Kubernetes cluster.

<Tabs groupId="kubernetes-tools" queryString>
  <TabItem value="minikube" label="minikube" default>
    To expose Scalar Manager on localhost (127.0.0.1), open another terminal and run the `minikube tunnel` command:

    ```console
    minikube tunnel
    ```

    Then, access Scalar Manager at http://localhost:8000.
  </TabItem>
  <TabItem value="other-kubernetes-clustering-tools" label="Other Kubernetes clustering tools">
    If you're using a Kubernetes cluster other than minikube, access the `LoadBalancer` service according to your cluster's instructions. For example, use a load balancer from your cloud service provider or use the `kubectl port-forward` command.
  </TabItem>
</Tabs>

## Additional details

This section provides additional details related to configurations and resource discovery.

### Upgrade Scalar Manager

To upgrade Scalar Manager, run the following command:

```console
helm upgrade ${SCALAR_MANAGER_RELEASE_NAME} scalar-labs/scalar-manager -n ${SCALAR_MANAGER_NAMESPACE} -f ${SCALAR_MANAGER_CUSTOM_VALUES_FILE} --version ${SCALAR_MANAGER_CHART_VERSION}
```

### Uninstall Scalar Manager

To uninstall Scalar Manager, run the following command:

```console
helm uninstall ${SCALAR_MANAGER_RELEASE_NAME} -n ${SCALAR_MANAGER_NAMESPACE}
```

### Optional Scalar Manager configurations

For optional configurations that you can set for Scalar Manager, see [Optional configurations](./configure-custom-values-scalar-manager.mdx#optional-configurations)

### Resource discovery

Scalar Manager discovers the following Kubernetes resources in a cluster by using specific label selectors:

- Dependencies
  - Prometheus service
- Targets
  - ScalarDB Cluster deployments
  - ScalarDL Ledger deployments
  - ScalarDL Auditor deployments

The following sections explain how Scalar Manager discovers these resources.

#### Dependencies

Scalar Manager searches for the default labels and values set in the [kube-prometheus-stack](https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-prometheus-stack) Helm Chart. For more information on the default labels and values that Scalar Manager uses to discover dependencies, see [Properties that you can set in `api.applicationProperties`](./configure-custom-values-scalar-manager.mdx#properties-that-you-can-set-in-apiapplicationProperties).

Also, if you customized any values when installing `kube-prometheus-stack`, you will need to update the label selectors in the Scalar Manager custom value `api.applicationProperties`.

#### Targets

Scalar Manager searches for ScalarDB Cluster, ScalarDL Ledger, and ScalarDL Auditor deployments by using the following labels and values:

- **ScalarDB Cluster:** `app.kubernetes.io/app=scalardb-cluster`
- **ScalarDL Ledger:** `app.kubernetes.io/app=ledger`
- **ScalarDL Auditor:** `app.kubernetes.io/app=auditor`

Scalar Helm Charts use fixed labels and values for ScalarDB Cluster, ScalarDL Ledger, and ScalarDL Auditor deployments so that if you install ScalarDB and ScalarDL by using [Scalar Helm Charts](https://github.com/scalar-labs/helm-charts), Scalar Manager will automatically discover these deployments.
